--- a/src/component/NavBar/NavBar.module.css
+++ b/src/component/NavBar/NavBar.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 10vh;
-  background-color: lightblue;
+  max-height: 8vh;
+  background-color: #f5f5f5;
 }
 
 .nav {
